Who are we page

--- a/index.html
+++ b/index.html
@@ -166,10 +166,41 @@
       <!-- who section content -->
       <div class="row">
         <div class="col span-1-of-3 box">
-          <a href="resources/img/mele-min.jpg"> <img src="resources/img/mele-min.jpg" alt="Pastor Melakselam" class="who-pic"></a>
+          <a href="resources/img/mele-min.jpg" class="who-link"> <img src="resources/img/mele-min.jpg" alt="Pastor Melakselam" class="who-pic"></a>
           <div class="who-features">
-            <p> <ion-icon name="person-outline" class="icon-small"></ion-icon> Pastor Melakeselam Bogale </p>
-            <p>   </p>
+            <ion-icon name="person-outline" class="icon-small"></ion-icon> Pastor Melakeselam Bogale
+          </div>
+          <div class="who-features">
+            <ion-icon name="call-outline" class="icon-small"></ion-icon> 0911364451
+          </div>
+          <div class="who-features">
+            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com"> Send email </a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-3 box">
+          <a href="resources/img/bini-min.jpg" class="who-link"> <img src="resources/img/bini-min.jpg" alt="Pastor Biniyam" class="who-pic"></a>
+          <div class="who-features">
+            <ion-icon name="person-outline" class="icon-small"></ion-icon> Pastor Biniyam Negash
+          </div>
+          <div class="who-features">
+            <ion-icon name="call-outline" class="icon-small"></ion-icon> 0911339532
+          </div>
+          <div class="who-features">
+            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com"> Send email </a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-3 box">
+          <a href="resources/img/daniel-mini.jpg" class="who-link"> <img src="resources/img/daniel-mini.jpg" alt="Mr Daniel" class="who-pic"></a>
+          <div class="who-features">
+            <ion-icon name="person-outline" class="icon-small"></ion-icon> Mr Daniel Asefa
+          </div>
+          <div class="who-features">
+            <ion-icon name="call-outline" class="icon-small"></ion-icon> 0911646200
+          </div>
+          <div class="who-features">
+            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com"> Send email </a>
           </div>
         </div>
       </div>
@@ -180,3 +211,4 @@
      <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </body>
   </html>
+
