Gallery and Find us page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
           <li><a href="#"> Management </a></li>
           <li><a href="#"> Gallery </a></li>
           <li><a href="#"> Find us </a></li>
-          <li><a href="#"> Contact </a></li>
         </ul>
       </nav>
       <!-- End of nav bar -->
@@ -174,7 +173,7 @@
             <ion-icon name="call-outline" class="icon-small"></ion-icon> 0911364451
           </div>
           <div class="who-features">
-            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com"> Send email </a>
+            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com" class="email-link"> Send email </a>
           </div>
         </div>
 
@@ -187,7 +186,7 @@
             <ion-icon name="call-outline" class="icon-small"></ion-icon> 0911339532
           </div>
           <div class="who-features">
-            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com"> Send email </a>
+            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com" class="email-link"> Send email </a>
           </div>
         </div>
 
@@ -200,7 +199,7 @@
             <ion-icon name="call-outline" class="icon-small"></ion-icon> 0911646200
           </div>
           <div class="who-features">
-            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com"> Send email </a>
+            <ion-icon name="mail-outline" class="icon-small"></ion-icon> <a href="malito: shalomsel@gmail.com" class="email-link"> Send email </a>
           </div>
         </div>
       </div>
@@ -208,7 +207,132 @@
     </section>
     <!-- End of who are we? section -->
 
+
+    <!-- Gallery section -->
+    <section class="section-gallery">
+      <ul class="gallery">
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g1-min.jpg"> <img src="resources/img/g1-min.jpg" alt="Gallery Image one"> </a>
+          </figure>
+        </li>
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g2-min.jpg"> <img src="resources/img/g2-min.jpg" alt="Gallery Image two"> </a>
+          </figure>
+        </li>
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g8-min.jpg"> <img src="resources/img/g8-min.jpg" alt="Gallery Image eigth"> </a>
+          </figure>
+        </li>
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g4-min.jpg"> <img src="resources/img/g4-min.jpg" alt="Gallery Image four"> </a>
+          </figure>
+        </li>
+      </ul>
+
+      <ul class="gallery">
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g5-min.jpg"> <img src="resources/img/g5-min.jpg" alt="Gallery Image five"> </a>
+          </figure>
+        </li>
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g6-min.jpg"> <img src="resources/img/g6-min.jpg" alt="Gallery Image six"> </a>
+          </figure>
+        </li>
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g7-min.jpg"> <img src="resources/img/g7-min.jpg" alt="Gallery Image seven"> </a>
+          </figure>
+        </li>
+        <li>
+          <figure class="gallery-showcase">
+            <a href="resources/img/g3-min.jpg"> <img src="resources/img/g3-min.jpg" alt="Gallery Image three"> </a>
+          </figure>
+        </li>
+      </ul>
+    </section>
+    <!-- End of gallery section-->
+
+    <!-- Find us -->
+    <section class="section-findus">
+      <div class="row">
+        <h2> Find us </h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-2 step-boxs">
+          <video controls autoplay loop width="600px" height="auto">
+            <source src="resources/img/subscribe.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="col span-1-of-2 step-boxs">
+          <div class="works-steps">
+            <div class="">
+              1
+            </div>
+            <p> You can find us on youtube with fundamental teachings </p>
+          </div>
+          <div class="works-steps">
+            <div class="">
+              2
+            </div>
+            <p> Do you use facebook? We also have a facebook page. </p>
+          </div>
+          <div class="works-steps">
+            <div class="">
+              3
+            </div>
+            <p> Addtional to youtube and facebook, join our telegram and whatsapp channels </p>
+          </div>
+          <div class="">
+            <ul class="social-icons">
+              <li>
+                <a href="#"> <ion-icon name="logo-youtube" class="findus-links youtube"></ion-icon></a>
+                <a href="#"> <ion-icon name="logo-facebook" class="findus-links facebook"></ion-icon></a>
+                <a href="#"><ion-icon name="send-outline" class="findus-links telegram"></ion-icon></a>
+                <a href="#"> <ion-icon name="logo-whatsapp" class="findus-links whatsapp"></ion-icon></a>
+              </li>
+            </ul>  
+        </div>
+      </div>
+    </div>
+    </section>
+    <!-- End of find us-->
+
+
+    <!-- Footer -->
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2 footer-boxs">
+          <ul class="footer-nav">
+            <li> <a href="#"> Home </a></li>
+            <li><a href="#"> Services </a></li>
+            <li><a href="#"> About us</a></li>
+            <li><a href="#"> Management </a></li>
+            <li><a href="#"> Gallery </a></li>
+            <li><a href="#"> Find us </a></li>
+          </ul>
+        </div>
+
+        <div class="col span-1-of-2 footer-boxs">
+          <div class="developer-features">
+            <p> <ion-icon name="person-outline" class="developer-icon"></ion-icon> Nebyu Samuel</p>
+            <p> <ion-icon name="call-outline" class="developer-icon"></ion-icon> +251923520962 </p>
+            <p> <ion-icon name="mail-outline" class="developer-icon"></ion-icon> nebahanijesus12345@gmail.com</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <p class="copy-right"> Copyright &copy; by Zowi All rights reserved </p>
+      </div>
+    </footer>
+    <!-- End of footer-->
      <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </body>
   </html>
 
+  
