--- a/index.html
+++ b/index.html
@@ -53,42 +53,27 @@
       <!-- Services -->
 
       <div class="row">
-        <div class="col span-1-of-3 box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="hammer-outline" class="icon-big"></ion-icon>
           <p class="services-text"> Equipping the society with the word of God </p>
         </div>
 
-        <div class="col span-1-of-3 box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="rocket-outline" class="icon-big"></ion-icon>
           <p class="services-text"> Reach those who can not attend church who are located in Ethiopia and aboard </p>
         </div>
 
 
-        <div class="col span-1-of-3 box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="medkit-outline" class="icon-big"></ion-icon>
           <p class="services-text"> Address those who are in need of the word of God with healthy teachings </p>
         </div>
-      </div>
 
-
-      <div class="row">
-        <div class="col span-1-of-3 box">
-          <ion-icon name="build-outline" class="icon-big"></ion-icon>
-          <p class="services-text"> To build a generation who know and live by the word of God </p>
-        </div>
-
-        <div class="col span-1-of-3 box">
-          <ion-icon name="people-outline" class="icon-big"></ion-icon>
-          <p class="services-text"> Salvation of those who are far from church and isolated from the society </p>
-        </div>
-
-
-        <div class="col span-1-of-3 box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="alert-circle-outline" class="icon-big"></ion-icon>
           <p class="services-text"> Build a doctrinal basement which can save many people from false teachings </p>
         </div>
       </div>
-
       <!-- End of services -->
 
     </section>
@@ -107,7 +92,7 @@
 
       <!-- about content -->
       <div class="row">
-        <div class="col span-3-of-4 box ">
+        <div class="col span-3-of-4 about-box">
           <div class="parts">
             <p class="about-text">
               Christian Education ክርስቲያናዊ ትምህርት (የወንጌል ብርሃን አለምአቀፍ ቤተክርስቲያን) መጽሐፍ ቅዱሳዊ መልዕክት የያዙ የክርስትና አስተምህሮትና በጤናማ መንፈሳዊ እንቅስቃሴ ላይ የሚያተኩር  ዌብሳይት  ነው፡፡
@@ -134,7 +119,7 @@
           </div>
 
         </div>
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 about-box">
           <a href="resources/img/mele-min.jpg" class="author"> <img src="resources/img/mele-min.jpg" alt="Pastor Melakselam" class="author-pic"></a>
           <p class="author-name"> Pastor Melakeselam Bogale </p>
         </div>
@@ -156,7 +141,7 @@
 
       <!-- who section content -->
       <div class="row">
-        <div class="col span-1-of-3 box">
+        <div class="col span-1-of-3 who-box">
           <a href="resources/img/mele-min.jpg" class="who-link"> <img src="resources/img/mele-min.jpg" alt="Pastor Melakselam" class="who-pic"></a>
           <div class="who-features">
             <ion-icon name="person-outline" class="icon-small"></ion-icon> Pastor Melakeselam Bogale
@@ -169,7 +154,7 @@
           </div>
         </div>
 
-        <div class="col span-1-of-3 box">
+        <div class="col span-1-of-3 who-box">
           <a href="resources/img/bini-min.jpg" class="who-link"> <img src="resources/img/bini-min.jpg" alt="Pastor Biniyam" class="who-pic"></a>
           <div class="who-features">
             <ion-icon name="person-outline" class="icon-small"></ion-icon> Pastor Biniyam Negash
@@ -182,7 +167,7 @@
           </div>
         </div>
 
-        <div class="col span-1-of-3 box">
+        <div class="col span-1-of-3 who-box">
           <a href="resources/img/daniel-mini.jpg" class="who-link"> <img src="resources/img/daniel-mini.jpg" alt="Mr Daniel" class="who-pic"></a>
           <div class="who-features">
             <ion-icon name="person-outline" class="icon-small"></ion-icon> Mr Daniel Asefa
