--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <!-- about content -->
       <div class="row">
-        <div class="col span-3-of-4 about-box">
+        <div class="col span-3-of-4 box">
           <div class="parts">
             <p class="about-text">
               Christian Education ክርስቲያናዊ ትምህርት (የወንጌል ብርሃን አለምአቀፍ ቤተክርስቲያን) መጽሐፍ ቅዱሳዊ መልዕክት የያዙ የክርስትና አስተምህሮትና በጤናማ መንፈሳዊ እንቅስቃሴ ላይ የሚያተኩር  ዌብሳይት  ነው፡፡
@@ -119,7 +119,7 @@
           </div>
 
         </div>
-        <div class="col span-1-of-4 about-box">
+        <div class="col span-1-of-4 box">
           <a href="resources/img/mele-min.jpg" class="author"> <img src="resources/img/mele-min.jpg" alt="Pastor Melakselam" class="author-pic"></a>
           <p class="author-name"> Pastor Melakeselam Bogale </p>
         </div>
