--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               <li>
                 <a href="https://www.youtube.com/channel/UCKBL2vFXInMf58TDGw0m-kA/featured?view_as=subscriber"> <ion-icon name="logo-youtube" class="findus-links youtube"></ion-icon></a>
                 <a href="https://www.facebook.com/Christian-Education-%E1%8B%A8%E1%8B%88%E1%8A%95%E1%8C%8C%E1%88%8D-%E1%89%A5%E1%88%AD%E1%88%83%E1%8A%95-%E1%8A%A0%E1%88%88%E1%88%9D%E1%8A%A0%E1%89%80%E1%8D%8D-%E1%89%A4%E1%89%B0%E1%8A%AD%E1%88%AD%E1%88%B5%E1%89%B2%E1%8B%AB%E1%8A%95"> <ion-icon name="logo-facebook" class="findus-links facebook"></ion-icon></a>
-                <a href="#"><ion-icon name="send-outline" class="findus-links telegram"></ion-icon></a>
+                <a href="https://t.me/christian_education_glic"><ion-icon name="send-outline" class="findus-links telegram"></ion-icon></a>
                 <a href="#"> <ion-icon name="logo-whatsapp" class="findus-links whatsapp"></ion-icon></a>
               </li>
             </ul>  
